<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>identify_frame</name>
  <version>0.0.1</version>
  <description>TODO: identify</description>
  <maintainer email="wjpzy20230551@qq.com">fight</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>

  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_transport_plugins</build_depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
